# nolerr-console

./: .main.c.swp  CMakeLists.txt  Makefile  README.md  build.bat  build_os.py  functions.h  functions_cpp.h  main.c  notich.txt  starts_nolerros
additions/: infos.c  timenow.c
additions/calculator/: calculator.c  calculatorfunc.h
additions/help/: external_help.c  help.c  help.py
additions/notich/: notich.c  notich.cpp
additions/wearth/: config.json  functions.py  show_forecast_weather.py  wearth_get.c
additions/weather_module/: show_current_weather.py  wearth_get.c
additions/website_accessibility/: accessibility.cpp
dependencies/: dependencies_py.c
file/: workfile.h  workfiles.c
filesystem/: filesystem.cpp  mainfs.c
interface/: interface.c
sharedlibraries/: global.h  platform.h
user_settings/: user_rights.c
